implement token blacklisting and logout

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1 style="text-align: center;">WELCOME TO THE DANTE API HOME SCREEN</h1>
 </body>
 </html>
